Bug 261802 - Fix painting of RenderListBox in vertical writing mode
Summary: Fix painting of RenderListBox in vertical writing mode
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-19 22:45 PDT by Aditya Keerthi
Modified: 2023-09-28 10:54 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aditya Keerthi 2023-09-19 22:45:41 PDT
SSIA
Comment 1 Radar WebKit Bug Importer 2023-09-19 22:45:56 PDT
<rdar://problem/115766419>
Comment 2 Aditya Keerthi 2023-09-25 18:35:35 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18204
Comment 3 Aditya Keerthi 2023-09-26 14:58:38 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/42192
Comment 4 EWS 2023-09-28 10:54:02 PDT
Committed 268594@main (c7a54f98d721): <https://commits.webkit.org/268594@main>

Reviewed commits have been landed. Closing PR #18204 and removing active labels.